# BTP_rl_continuum_robot

MATLAB/All_config_file_initializer/: TwoRigidBarAlongWidthStiffness.m  bendingLoadX.m  configFiles.m  constraintsFileFixedTop.m  constraintsFileFixedTopWithFixedZ.m  constraintsFileRollingTopWithFixedZ.m  createObj.m  gravityFile.m  main.m  matlabConfigforReadingData.m  momentAtEachSection.m  nRigidBarAlongWidthStiffness.m  noLoad.m  sameStiffness.m  vegaConfigurationFile.m  verticalLoad.m
MATLAB/analysingVegaData/: config_coarse.csv  config_finer.csv
MATLAB/ros_data/: config.csv  force_calllback.m  main.m  radius_callback.asv  radius_callback.m  radius_calllback.m  slope_calllback.m  state_callback.asv  state_callback.m  target_callback.m  tip_pose_calllback.m  velocity_calllback.m
vega_libraries/: CMakeLists.txt  package.xml
vega_libraries/include/: forceModel.h  forceModelAssembler.h  implicitNewmarkSparse.h  integratorSolverSelection.h
vega_libraries/src/: boundingBox.cpp  forceModel.cpp  forceModelAssembler.cpp  implicitNewmarkSparse.cpp  integratorBaseSparse.cpp  massSpringSystem.cpp  massSpringSystemFromObjMeshConfigFile.cpp  volumetricMeshLoader.cpp
vega_simulator/: CMakeLists.txt  package.xml
vega_simulator/config/: beam3_vox.massspring  beam3_vox_coarse.massspring  beam3_vox_finer.massspring  beam3_vox_massspring.config  beam3_vox_massspring_coarse.config  beam3_vox_massspring_finer.config  constraints.bou  constraints_coarse.bou  constraints_finer.bou  k.csv  k_coarse.csv  k_finer.csv  moments.csv  moments_coarse.csv  moments_finer.csv  rospack_cache_01194747710669125008  rospack_cache_02632846263999710036  rosstack_cache_01194747710669125008  vegaConfigurations.csv  vegaConfigurations_coarse.csv  vegaConfigurations_finer.csv
vega_simulator/launch/: simulator.launch  workspace.launch
vega_simulator/results/: Mar5_Path_Following_6point_states_Policy  Mar5_Path_Following_Policy  mar16_Task4_Trajectory_Tracking_Policy
(+44 files in other folders)
